--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -394,9 +394,10 @@
                                 <thead>
                                     <tr>
                                         <th style="width: 10%" scope="col"></th>
-                                        <th style="width: 30%" scope="col">Id</th>
-                                        <th style="width: 30%" scope="col">Name</th>
-                                        <th style="width: 30%" scope="col">Skills</th>
+                                        <th style="width: 10%" scope="col">Id</th>
+                                        <th style="width: 10%" scope="col">Name</th>
+                                        <th style="width: 35%" scope="col">Skills</th>
+                                        <th style="width: 35%" scope="col">Schedule</th>
 									</tr>
                                 </thead>
                                 <tbody th:each="employee: ${employees}">
@@ -407,6 +408,7 @@
                                         <th th:text="${employee.employeeId}" scope="row">Example Employee Id</th>
                                         <td th:text="${employee.employeeName}">Example Employee Name</td>
                                         <td th:text="${employee.employeeSkills}">Example Employee Skills</td>
+                                        <td th:text="${employee.employeeSchedule}">Example Employee Skills</td>
 									</tr>
                                 </tbody>
                             </table>
@@ -578,8 +580,8 @@
 												</select>
 											</div>
                                             <div class="form-group">
-                                                <label for="schedule-date" class="col-form-label">Date (2021-11-22 format)</label>
-                                               <input th:field="*{date}" type="text" name="scheduleDate" class="form-control" id="schedule-date" maxlength="50" required>
+                                                <label for="schedule-date" class="col-form-label">Date</label>
+                                                <input th:field="*{date}" type="date" name="scheduleDate" id="schedule-date" value="2021-12-02" min="2021-12-02" max="2099-12-31">
                                             </div>
 											<div class="form-group blu-margin">
 												<label for="schedule-skill" class="col-form-label">Skills</label>
