--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -212,27 +212,61 @@
                             <table class="table table-striped" id="userTable">
                                 <thead>
                                     <tr>
-                                        <th style="width: 10%" scope="col"></th>
-                                        <th style="width: 30%" scope="col">Model</th>
-                                        <th style="width: 30%" scope="col">Condition</th>
-                                        <th style="width: 30%" scope="col">Production year</th>
-                                    </tr>
+                                        <th style="width: 5%" scope="col"></th>
+                                        <th style="width: 5%" scope="col">Model</th>
+                                        <th style="width: 5%" scope="col">Condition</th>
+                                        <th style="width: 5%" scope="col">Production year</th>
+                                        <th style="width: 5%" scope="col">Body</th>
+                                        <th style="width: 5%" scope="col">Code</th>
+                                        <th style="width: 5%" scope="col">Name</th>
+                                        <th style="width: 5%" scope="col">Doors</th>
+                                        <th style="width: 5%" scope="col">FuelType</th>
+                                        <th style="width: 5%" scope="col">Engine</th>
+                                        <th style="width: 5%" scope="col">Mileage</th>
+                                        <th style="width: 5%" scope="col">ModelYear</th>
+                                        <th style="width: 5%" scope="col">Color</th>
+                                        <th style="width: 5%" scope="col">LatLocation</th>
+                                        <th style="width: 5%" scope="col">LongLocation</th>
+									</tr>
                                 </thead>
                                 <tbody th:each="car: ${cars}">
                                     <tr>
                                         <td>
-                                            <button type="button" class="btn btn-success" th:data-id="${car.carId}" th:data-model="${car.carModel}"
-													th:data-condition="${car.carCondition}" th:data-productionYear="${car.carProductionYear}" th:onclick="showCarModal(this.getAttribute('data-id'),
-														this.getAttribute('data-model'), this.getAttribute('data-condition'), this.getAttribute('data-productionYear'))">
+                                            <button type="button" class="btn btn-success" th:data-id="${car.id}" th:data-model="${car.model}"
+													th:data-condition="${car.condition}" th:data-productionYear="${car.productionYear}" 
+													th:data-body="${car.body}" th:data-code="${car.code}" 
+													th:data-name="${car.name}" th:data-numberOfDoors="${car.numberOfDoors}" 
+													th:data-fuelType="${car.fuelType}" th:data-engine="${car.engine}" 
+													th:data-mileage="${car.mileage}" th:data-modelYear="${car.modelYear}" 
+													th:data-externalColor="${car.externalColor}" th:data-latLocation="${car.latLocation}" 
+													th:data-longLocation="${car.longLocation}" 
+													th:onclick="showCarModal(this.getAttribute('data-id'), this.getAttribute('data-model'),
+														this.getAttribute('data-condition'), this.getAttribute('data-productionYear'),
+														this.getAttribute('data-body'), this.getAttribute('data-code'), 
+														this.getAttribute('data-name'), this.getAttribute('data-numberOfDoors'), 
+														this.getAttribute('data-fuelType'), this.getAttribute('data-engine'), 
+														this.getAttribute('data-mileage'), this.getAttribute('data-modelYear'), 
+														this.getAttribute('data-externalColor'), this.getAttribute('data-latLocation'), 
+														this.getAttribute('data-longLocation'))">
 														Edit
 														</button>
-                                        <a class="btn btn-danger" th:href="@{/car/delete/{carId}(carId = ${car.get('carId')})}">Delete</a>
-										</td>
-										
-                                        <th th:text="${car.get('carModel')}" scope="row">Example Car Model</th>
-                                        <td th:text="${car.get('carCondition')}">Example Car Condition </td>
-                                        <td th:text="${car.get('carProductionYear')}">Example Car Production Year </td>
-                                    </tr>
+                                        <a class="btn btn-danger" th:href="@{/car/delete/{carId}(carId = ${car.get('id')})}">Delete</a>
+										</td>	
+			                            <th th:text="${car.get('model')}" scope="row">Example Car Model</th>
+                                        <td th:text="${car.get('condition')}">Example Car Condition</td>
+                                        <td th:text="${car.get('productionYear')}">Example Car Production Year</td>
+                                        <th th:text="${car.get('body')}" scope="row">Example Car Body</th>
+                                        <th th:text="${car.get('code')}" scope="row">Example Car Code</th>
+                                        <td th:text="${car.get('name')}">Example Car Name</td>
+                                        <td th:text="${car.get('numberOfDoors')}">Example Car Doors</td>
+                                        <th th:text="${car.get('fuelType')}" scope="row">Example Car Fuel type</th>
+                                        <td th:text="${car.get('engine')}">Example Car Engine</td>
+                                        <td th:text="${car.get('mileage')}">Example Car Milage</td>
+                                        <th th:text="${car.get('modelYear')}" scope="row">Example Car Model Year</th>
+                                        <td th:text="${car.get('externalColor')}">Example Car Color</td>
+                                        <td th:text="${car.get('latLocation')}">Example Car Latitude Location</td>
+                                        <td th:text="${car.get('longLocation')}">Example Car Longitude Location</td>											
+									</tr>
                                 </tbody>
                             </table>
                         </div>
@@ -248,21 +282,52 @@
                                     </div>
                                     <div class="modal-body">
                                         <form th:object="${newCar}" th:action="@{/car/addCar}" action="#" method="POST">
-                                            <input th:field="*{carId}"  type="hidden" name="carId" id="car-id">
+                                            <input th:field="*{id}"  type="hidden" name="carId" id="car-id">
                                             <div class="form-group">
                                                 <label for="car-model" class="col-form-label">Model</label>
-                                                <textarea th:field="*{carModel}" name="carModel" class="form-control" id="car-model" maxlength="200" required></textarea>
+                                                <textarea th:field="*{model}" name="carModel" class="form-control" id="car-model" maxlength="200" required></textarea>
                                             </div>
                                             <div class="form-group blu-margin">
                                                 <label for="car-condition" class="col-form-label">Car Condition</label>
-                                                <select class="form-control" th:field="*{carCondition}"  id="car-condition">
+                                                <select class="form-control" th:field="*{condition}"  id="car-condition">
                                                     <option value="" selected disabled hidden>Select condition</option>
                                                     <option th:each="condition : ${conditions}" th:value="${condition}" th:text="${condition}"></option>
                                                 </select>
                                             </div>
 											<label for="car-productionYear" class="col-form-label">Production year</label>
-											<input th:field="*{carProductionYear}" type="number" min="1900" step="1" id="car-productionYear"/>
-                                            <button id="carSubmit" type="submit" class="d-none"></button>
+											<input th:field="*{productionYear}" type="number" min="1900" max="2100" step="1" id="car-productionYear"/>
+
+                                            <div class="form-group">
+                                                <label for="car-body" class="col-form-label">Body</label>
+                                                <textarea th:field="*{body}" name="carBody" class="form-control" id="car-body" maxlength="200" required></textarea>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="car-name" class="col-form-label">Name</label>
+                                                <textarea th:field="*{name}" name="carName" class="form-control" id="car-name" maxlength="200" required></textarea>
+                                            </div>
+											<label for="car-numberOfDoors" class="col-form-label">Number of doors</label>
+											<input th:field="*{numberOfDoors}" type="number" min="2" max="8" step="1" id="car-numberOfDoors"/>
+                                            <div class="form-group">
+                                                <label for="car-fuelType" class="col-form-label">Fuel type</label>
+                                                <textarea th:field="*{fuelType}" name="carFuelType" class="form-control" id="car-fuelType" maxlength="200" required></textarea>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="car-engine" class="col-form-label">Engine</label>
+                                                <textarea th:field="*{engine}" name="carEngine" class="form-control" id="car-engine" maxlength="200" required></textarea>
+                                            </div>
+											<label for="car-mileage" class="col-form-label">Mileage</label>
+											<input th:field="*{mileage}" type="number" min="0" max="1000000" step="1" id="car-mileage"/>
+											<label for="car-modelYear" class="col-form-label">Model Year</label>
+											<input th:field="*{modelYear}" type="number" min="1900" max="2100" step="1" id="car-modelYear"/>
+                                            <div class="form-group">
+                                                <label for="car-externalColor" class="col-form-label">Color</label>
+                                                <textarea th:field="*{externalColor}" name="carExternalColor" class="form-control" id="car-externalColor" maxlength="200" required></textarea>
+                                            </div>
+											<label for="car-latLocation" class="col-form-label">Latitude Location</label>
+											<input th:field="*{latLocation}" type="number" min="-90" max="90" step="0.01" id="car-latLocation"/>
+											<label for="car-numberOfDoors" class="col-form-label">Longitude Location</label>
+											<input th:field="*{longLocation}" type="number" min="-180" max="180" step="0.01" id="car-longLocation"/>
+											<button id="carSubmit" type="submit" class="d-none"></button>
                                         </form>
                                     </div>
                                     <div class="modal-footer">
@@ -541,7 +606,7 @@
 												</select>
 											</div>
 											<div class="form-group blu-margin">
-												<label for="employee-name"class="col-form-label">Owner</label>
+												<label for="employee-name"class="col-form-label">Employee</label>
 												<select class="form-control" th:field="*{employeeId}">
 												<option value="0" selected>Select employee</option>
 												<option th:each="employee : ${employees}" th:value="${employee.employeeId}" th:text="${employee.employeeId} + ', ' +  ${employee.employeeName}"></option>
@@ -856,11 +921,22 @@
                 $('#credentialModal').modal('show');
             }
             // For opening the car modal
-            function showCarModal(carId, carModel, carCondition, carProductionYear) {
-                $('#car-id').val(carId ? carId : '');
-                $('#car-model').val(carModel ? carModel : '');
-                $('#car-condition').val(carCondition ? carCondition : '');
-				$('#car-productionYear').val(carProductionYear ? carProductionYear : '');
+            function showCarModal(id, model, condition, productionYear, body, code, name, numberOfDoors, fuelType, engine, mileage, modelYear, externalColor, latLocation, longLocation) {
+                $('#car-id').val(id ? id : '');
+                $('#car-model').val(model ? model : '');
+                $('#car-condition').val(condition ? condition : '');
+                $('#car-productionYear').val(productionYear ? productionYear : '');
+                $('#car-body').val(body ? body : '');
+                $('#car-code').val(code ? code : '');
+                $('#car-name').val(name ? name : '');
+                $('#car-numberOfDoors').val(numberOfDoors ? numberOfDoors : '');
+                $('#car-fuelType').val(fuelType ? fuelType : '');
+                $('#car-engine').val(engine ? engine : '');
+                $('#car-mileage').val(mileage ? mileage : '');
+                $('#car-modelYear').val(modelYear ? modelYear : '');
+                $('#car-externalColor').val(externalColor ? externalColor : '');
+                $('#car-latLocation').val(model ? latLocation : '');
+                $('#car-longLocation').val(model ? longLocation : '');
                 $('#carModal').modal('show');
             }
             // For opening the pet modal
