--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
 
     <title>Home</title>
+
 </head>
 <body class="p-3 mb-2 bg-light text-black">
 <div class="container">
@@ -30,6 +31,8 @@
                    aria-controls="nav-pets" aria-selected="false">Pets</a>
                 <a class="nav-item nav-link" id="nav-ecommerce-tab" data-toggle="tab" href="#nav-ecommerce" role="tab"
                    aria-controls="nav-ecommerce" aria-selected="false">Ecommerce</a>
+                <a class="nav-item nav-link" id="nav-openai-tab" data-toggle="tab" href="#nav-openai" role="tab"
+                   aria-controls="nav-openai" aria-selected="false">OpenAI request</a>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
@@ -1006,6 +1009,55 @@
                     </div>
                 </div>
             </div>
+            <div class="tab-pane fade" id="nav-openai" role="tabpanel" aria-labelledby="nav-openai-tab">
+                <button id="showOpenAiForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left"
+                        onclick="showOpenAiModal()">
+                    + Add a New OpenAi request
+                </button>
+                <div class="table-responsive">
+                    <div id="showOpenAiStatus" th:if="${openAiLastQuestion}">
+                        <h2 style="background-color:lightpink;color:white">
+                            <p style="font-size: 60%">Last Open Ai question: <span th:text="${openAiLastQuestion}"></span></p>
+                        </h2>
+                    </div>
+                </div>
+                <div class="table-responsive">
+                    <div id="showOpenAiStatus2" th:if="${openAiLastAnswer}">
+                        <h2 style="background-color:lightgreen;color:black">
+                            <p style="font-size: 60%">Last Open Ai answer: <span th:text="${openAiLastAnswer}"></span></p>
+                        </h2>
+                    </div>
+                </div>
+                <div class="modal fade" id="openAiModal" tabindex="-1" role="dialog" aria-labelledby="openAiModalLabel"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="openAiModalLabel">OpenAi prompt (max 100 character)</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form th:object="${newOpenAi}" th:action="@{/openai/makeCompletition}" action="#" method="POST">
+                                    <input th:field="*{openAiId}" type="hidden" name="openAiId" id="openAi-id">
+                                    <div class="form-group">
+                                        <label for="openAi-title" class="col-form-label">Title</label>
+                                        <input th:field="*{openAiQuestion}" type="text" name="openAiQuestion" class="form-control"
+                                               id="openAi-title" maxlength="100" required>
+                                    </div>
+                                    <button id="openAiSubmit" type="submit" class="d-none"></button>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary" onclick="$('#openAiSubmit').click();">Submit OpenAI prompt
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -1014,7 +1066,7 @@
 <script th:src="@{/js/popper.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
 
-<!--For opening the note modal-->
+<!--For opening the openAi modal-->
 <script type="text/javascript">
             // For opening the note modal
             function showNoteModal(noteId, noteTitle, noteDescription) {
@@ -1108,6 +1160,11 @@
                 $('#ecommerceOrderModal').modal('show');
             }
 
+            function showOpenAiModal(openAiId, openAiQuestion) {
+                $('#openAi-id').val(openAiId ? openAiId : '');
+                $('#openAi-title').val(openAiQuestion ? openAiQuestion : '');
+                $('#openAiModal').modal('show');
+            }
 
 </script>
 </body>
