--- a/cloudinterface/src/main/resources/templates/result.html
+++ b/cloudinterface/src/main/resources/templates/result.html
@@ -14,6 +14,10 @@
         <h1 class="display-5">Success</h1>
         <meta http-equiv="refresh" content="0.5; URL=/home"/>
     </div>
+    <div class="alert alert-success fill-parent" th:if="${openAiAnswer}">
+        <h1 class="display-5">The question was: <br>  <span th:text="${openAiLastQuestion}">test</span> <br> and the anwser is: <br>  <span th:text="${openAiLastAnswer}"> test</span></h1>
+        <span> Click <a id="openAiResult" th:href="@{/home}">here</a> to continue.</span>
+    </div>
     <div class="alert alert-danger fill-parent" th:if="${updateError}">
         <h1 class="display-5">Error</h1>
         <h1 th:text="${updateError}"></h1>
