--- a/cloudinterface/src/main/resources/templates/home.html
+++ b/cloudinterface/src/main/resources/templates/home.html
@@ -1012,22 +1012,47 @@
             <div class="tab-pane fade" id="nav-openai" role="tabpanel" aria-labelledby="nav-openai-tab">
                 <button id="showOpenAiForm" style="margin: 0.25em;" type="button" class="btn btn-info float-left"
                         onclick="showOpenAiModal()">
-                    + Add a New OpenAi request
+                    + Add a New OpenAi Completition request
                 </button>
                 <div class="table-responsive">
                     <div id="showOpenAiStatus" th:if="${openAiLastQuestion}">
                         <h2 style="background-color:lightpink;color:white">
-                            <p style="font-size: 60%">Last Open Ai question: <span th:text="${openAiLastQuestion}"></span></p>
+                            <p style="font-size: 60%">Last OpenAi question: <span th:text="${openAiLastQuestion}"></span></p>
                         </h2>
                     </div>
                 </div>
                 <div class="table-responsive">
                     <div id="showOpenAiStatus2" th:if="${openAiLastAnswer}">
                         <h2 style="background-color:lightgreen;color:black">
-                            <p style="font-size: 60%">Last Open Ai answer: <span th:text="${openAiLastAnswer}"></span></p>
+                            <p style="font-size: 60%">Last OpenAi answer: <span th:text="${openAiLastAnswer}"></span></p>
                         </h2>
                     </div>
                 </div>
+                <div class="table-responsive">
+                    <button id="showOpenAiFormImage" style="margin: 0.25em;" type="button" class="btn btn-info float-left"
+                            onclick="showOpenAiImageModal()">
+                        + Add a New OpenAi Image request
+                    </button>
+                </div>
+                <div class="table-responsive">
+                    <div id="showOpenAiStatus3" th:if="${openAiLastImageQuestion}">
+                        <h2 style="background-color:lightpink;color:white">
+                            <p style="font-size: 60%">Last OpenAi question: <span th:text="${openAiLastImageQuestion}"></span></p>
+                        </h2>
+                    </div>
+                </div>
+                <div class="table-responsive">
+                    <div id="showOpenAiStatus4" th:if="${openAiLastImageQuestion}">
+                        <tbody th:each="image: ${images}">
+                            <tr>
+                                <img th:src="${image.get('url')}" />
+                            </tr>
+                        </tbody>
+                    </div>
+                </div>
+
+
+
                 <div class="modal fade" id="openAiModal" tabindex="-1" role="dialog" aria-labelledby="openAiModalLabel"
                      aria-hidden="true">
                     <div class="modal-dialog" role="document">
@@ -1052,6 +1077,36 @@
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                 <button type="button" class="btn btn-primary" onclick="$('#openAiSubmit').click();">Submit OpenAI prompt
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="openAiImageModal" tabindex="-1" role="dialog" aria-labelledby="openAiImageModalLabel"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="openAiImageModalLabel">OpenAi Image prompt (max 100 character)</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form th:object="${newOpenAiImage}" th:action="@{/openai/makeImage}" action="#" method="POST">
+                                    <input th:field="*{openAiId}" type="hidden" name="openAiImageId" id="openAiImage-id">
+                                    <div class="form-group">
+                                        <label for="openAiImage-title" class="col-form-label">Prompt</label>
+                                        <input th:field="*{openAiImageQuestion}" type="text" name="openAiImageQuestion" class="form-control"
+                                               id="openAiImage-title" maxlength="100" required>
+                                    </div>
+                                    <button id="openAiImageSubmit" type="submit" class="d-none"></button>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary" onclick="$('#openAiImageSubmit').click();">Submit OpenAI Image prompt
                                 </button>
                             </div>
                         </div>
@@ -1165,7 +1220,11 @@
                 $('#openAi-title').val(openAiQuestion ? openAiQuestion : '');
                 $('#openAiModal').modal('show');
             }
-
+            function showOpenAiImageModal(openAiId, openAiImageQuestion) {
+                $('#openAiImage-id').val(openAiId ? openAiId : '');
+                $('#openAiImage-title').val(openAiImageQuestion ? openAiImageQuestion : '');
+                $('#openAiImageModal').modal('show');
+            }
 </script>
 </body>
 </html>
