--- a/react-apiview-app/src/app/globals.css
+++ b/react-apiview-app/src/app/globals.css
@@ -25,3 +25,63 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.submitbutton {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
+
+.clearbutton {
+  background-color: red; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
+
+.popup-box {
+  width: 750px;
+  background-color: white;
+  position: fixed;
+  top: 200px;
+  border: 4px solid;
+  border-radius: 6px;
+  min-height: 100px;
+}
+
+.popup-submit {
+  background-color: red; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px
+}
+
+.popup-close {
+  background-color: red; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
+
+
