--- a/react-apiview-app/src/app/globals.css
+++ b/react-apiview-app/src/app/globals.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  font-size: 16px;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -28,6 +29,18 @@ body {
 
 .submitbutton {
   background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
+
+.ml-update-button {
+  background-color: blue;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -54,14 +67,14 @@ body {
   width: 750px;
   background-color: white;
   position: fixed;
-  top: 200px;
+  top: 100px;
   border: 4px solid;
   border-radius: 6px;
-  min-height: 100px;
+  min-height: 200px;
 }
 
 .popup-submit {
-  background-color: red; /* Green */
+  background-color: #04AA6D; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
