--- a/frontend/react-apiview-app/src/app/globals.css
+++ b/frontend/react-apiview-app/src/app/globals.css
@@ -27,6 +27,12 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+html, body, #root {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 .submitbutton {
   background-color: #04AA6D; /* Green */
   border: none;
@@ -89,12 +95,9 @@ body {
   background-color: red; /* Green */
   border: none;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
   border-radius: 12px;
+  width: 80px;
+
 }
 
 .inline-block {
