--- a/frontend/react-apiview-app/src/app/globals.css
+++ b/frontend/react-apiview-app/src/app/globals.css
@@ -33,40 +33,75 @@ html, body, #root {
   padding: 0;
 }
 
+.loading {
+  text-align: center;
+  padding: 20px;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+}
+
+.section {
+  flex: 1 1 100%;
+  max-width: 600px;
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.section h1 {
+  margin-top: 0;
+}
+
+input[type="text"], input[type="number"], input[type="phone"], select, input[type="submit"], input[type="password"], button {
+  width: 300px;
+  padding: 8px;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+
 .submitbutton {
-  background-color: #04AA6D; /* Green */
-  border: none;
+  background-color: #4CAF50;
   color: white;
-  padding: 5px 25px;
+  border: none;
+  padding: 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 14px;
-  border-radius: 12px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .ml-update-button {
   background-color: blue;
-  border: none;
   color: white;
-  padding: 5px 25px;
+  border: none;
+  padding: 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 14px;
-  border-radius: 12px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .clearbutton {
-  background-color: red; /* Green */
-  border: none;
+  background-color: red;
   color: white;
-  padding: 5px 25px;
+  border: none;
+  padding: 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 14px;
-  border-radius: 12px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .popup-box {
@@ -77,30 +112,6 @@ html, body, #root {
   border: 4px solid;
   border-radius: 6px;
   min-height: 200px;
-}
-
-.popup-submit {
-  background-color: #04AA6D; /* Green */
-  border: none;
-  color: white;
-  padding: 5px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 12px
-}
-
-.popup-close {
-  background-color: red; /* Green */
-  border: none;
-  color: white;
-  padding: 5px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 12px;
 }
 
 .inline-block {
