--- a/frontend/react-apiview-app/src/styles/globals.css
+++ b/frontend/react-apiview-app/src/styles/globals.css
@@ -20,6 +20,7 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
+    --primary-color: black;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
@@ -41,8 +42,9 @@
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: #292524;
     --foreground: 210 40% 98%;
+    --primary-color: white;
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
     --popover: 222.2 84% 4.9%;
@@ -63,6 +65,11 @@
   }
 }
 
+.centered {
+ margin-left: auto;
+ margin-right: auto;
+}
+
 .loading {
   text-align: center;
   padding: 20px;
@@ -78,11 +85,13 @@
 .section {
   flex: 1 1 100%;
   max-width: 600px;
+  height: auto;
   margin: 10px;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
 
 .section h1 {
   margin-top: 0;
@@ -93,6 +102,26 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
   padding: 8px;
   margin: 10px 0;
   box-sizing: border-box;
+}
+
+.menuButton {
+  width: 100px;
+  border: 2px solid #4CAF50;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 20px;
+}
+
+.styleButton {
+  width: 10px;
+  border: 2px solid #4CAF50;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 20px;
 }
 
 .submitbutton {
@@ -214,7 +243,7 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
   max-width: 400px;
   margin: 0;
   border-radius: 12px;
-  background-color: rgb(148, 216, 255);
+  background-color: var(--primary-color);
   color: rgb(90, 90, 90);
   display: inline-block;
 }
@@ -228,15 +257,15 @@ input[type="text"], input[type="number"], input[type="phone"], select, input[typ
   width: 100%;
   justify-content: space-between;
   max-width: 900px;
-  margin: 0 auto 40px;
+  margin: 0 auto 60px;
   margin-bottom: 38px;
 }
 
 .inputField {
-  padding: 5px;
+  background-color: white;
+  padding: 0px;
   font-size: 16px;
-  border-radius: 8px;
-  border: 1px solid orangered;
+  border-radius: 0px;
   flex-grow: 1;
 }
 
